refactor(cognition): manage state serialization via StateCenter in CognitionCore